# coreai-models

.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  model_request.yml  workflow_feedback.yml
models/clap/: export.py
models/clip/: export.py
models/depth-anything/: export.py
models/edsr/: export.py
models/efficient-sam/: export.py
models/pvt/: export.py
models/roberta/: export.py
models/sam3/: export.py
models/t5/: export.py
models/wav2vec2/: export.py
models/whisper/: export.py
models/yolo/: README.md  export.py
python/: pyproject.toml
python/src/coreai_models/diffusion/: flux2.py
python/src/coreai_models/export/: metadata.py  pipeline.py
python/src/coreai_models/llm/: export.py
python/src/coreai_models/models/: base.py
python/src/coreai_models/models/macos/: mixtral.py
python/src/coreai_models/primitives/ios/: cache.py  rope.py  sdpa.py
python/src/coreai_models/primitives/macos/: cache.py  rope.py  switch.py
swift/Sources/CoreAIDiffusionPipeline/Pipelines/: Flux2Pipeline.swift
swift/Sources/CoreAIDiffusionPipeline/Schedulers/: DiscreteFlowScheduler.swift
swift/Sources/CoreAILanguageModels/Bundle/: LanguageConfig.swift
swift/Sources/CoreAILanguageModels/DecodingStrategies/: ConstrainedDecodingStrategy.swift
swift/Sources/CoreAILanguageModels/InferenceEngines/: CoreAISequentialVLMEngine.swift  EmbeddedInput.swift
swift/Sources/CoreAILanguageModels/LanguageModel/: CoreAILanguageModel.swift
swift/Sources/CoreAILanguageModels/Samplers/: MPSGraphSamplers.swift
swift/Sources/CoreAILanguageModels/VLM/: CoreAIVisionLanguageModel.swift
swift/Sources/CoreAIObjectDetector/: DetectionOutputs.swift  ObjectDetector.swift
swift/Sources/Tools/image-segmenter/: ImageSegmentationRunnerMain.swift
swift/Sources/Tools/llm-runner/: LLMRunnerMain.swift
swift/Sources/Tools/object-detector/: ObjectDetectionMain.swift
swift/Tests/LanguageModelsTests/: VLMProtocolTests.swift
swift/Tests/ObjectDetectorTests/: ObjectDetectorTests.swift
